# metapaths_publ

./: README.md  get_inf_dyn.py  pip_install_note.txt  reinstall_howto.txt  test_inf.py
demos/: metapaths_inf_feature_extract_demo.ipynb
metapaths/: setup.py
metapaths/src/: inf.py  starterpack.py
metapaths_src/: setup.py
metapaths_src/metapaths/: inf.py  starterpack.py
metapaths_src/metapaths.egg-info/: PKG-INFO  SOURCES.txt
metapaths_tests/: test2_.py  test_inf_class.py  test_inf_funcs_1.py  test_inf_funcs_2.py  test_notebook.ipynb  test_py.py  test_starter_funcs.py
src/: LICENCE.txt  README.md  pyproject.toml
